# fastapistudy

./: .gitignore  LICENSE  README.md  config.py  configs.py  main.py  mylogger.py  pyproject.toml  requirements.txt  run.py
test/: __init__.py  test_route.py
