[tool.poetry]
name = "fastapistudy"
version = "0.1.0"
description = ""
authors = ["jinyoung <gooalkhan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
loguru = "^0.5.3"
uvloop = "^0.15.2"
python-dotenv = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
